--- a/index.html
+++ b/index.html
@@ -1,278 +1,78 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>HappyEdit — Free Online PDF Tools</title>
-  <meta name="description" content="HappyEdit — fast, private PDF tools (edit, split, delete pages, add pages, unlock). All processing happens in your browser." />
-  <meta name="keywords" content="PDF editor, split PDF, delete pages, add pages, unlock PDF, online PDF tool" />
-  <meta name="robots" content="index, follow" />
-  <!-- Google verification: replace content value with your token -->
-  <meta name="google-site-verification" content="YOUR_GSC_CODE_HERE" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- Use Inter for a modern look -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+  <title>HappyEdit – Free & Private Online PDF Tools</title>
+
+  <!-- SEO -->
+  <meta name="description" content="HappyEdit offers free, fast and privacy-friendly PDF tools including edit, split, delete, add pages and decrypt. All operations are processed directly in your browser." />
+  <meta name="keywords" content="PDF tool, edit PDF, split PDF, delete PDF pages, decrypt PDF, browser PDF editor" />
+  <meta name="robots" content="index, follow">
+
+  <!-- Google Search Console -->
+  <meta name="google-site-verification" content="YOUR_GSC_CODE_HERE">
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="HappyEdit - Free Online PDF Tools">
+  <meta property="og:description" content="Free, browser-based PDF editing tools with full privacy.">
+  <meta property="og:image" content="https://happyedit.dpdns.org/assets/cover.png">
+  <meta property="og:url" content="https://happyedit.dpdns.org/">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="HappyEdit - Free Online PDF Tools">
+  <meta name="twitter:description" content="Free PDF tools processed directly in your browser.">
+  <meta name="twitter:image" content="https://happyedit.dpdns.org/assets/cover.png">
 
   <link rel="icon" href="assets/favicon.png" type="image/png">
-
-  <style>
-    :root{
-      --bg-1: #0f172a;      /* deep navy */
-      --bg-2: #0b3e6b;      /* darker blue */
-      --accent-a: #7b61ff;  /* violet */
-      --accent-b: #2dd4bf;  /* teal */
-      --glass: rgba(255,255,255,0.10);
-      --glass-2: rgba(255,255,255,0.16);
-      --muted: rgba(255,255,255,0.78);
-      --card-shadow: 0 10px 30px rgba(2,6,23,0.6);
-      --radius: 16px;
-      font-family: 'Inter', system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
-    }
-
-    /* Page background: dark gradient + subtle blobs */
-    html,body{height:100%;margin:0}
-    body{
-      background: radial-gradient(1200px 600px at 10% 10%, rgba(123,97,255,0.18), transparent 10%),
-                  radial-gradient(1000px 500px at 90% 90%, rgba(45,212,191,0.12), transparent 12%),
-                  linear-gradient(180deg,var(--bg-1),var(--bg-2));
-      color: white;
-      -webkit-font-smoothing:antialiased;
-      -moz-osx-font-smoothing:grayscale;
-      display:flex;
-      flex-direction:column;
-      min-height:100vh;
-      padding:32px 20px;
-    }
-
-    /* Container to center content */
-    .wrap{
-      width:100%;
-      max-width:1200px;
-      margin:0 auto;
-    }
-
-    header.site-head{
-      display:flex;
-      align-items:center;
-      justify-content:space-between;
-      gap:16px;
-      margin-bottom:28px;
-    }
-    .brand{
-      display:flex;
-      gap:14px;
-      align-items:center;
-      text-decoration:none;
-      color:var(--muted);
-    }
-    .logo-dot{
-      width:48px;height:48px;border-radius:12px;
-      background: linear-gradient(135deg,var(--accent-a),var(--accent-b));
-      display:inline-block;box-shadow:0 6px 22px rgba(11,20,40,0.5);
-      flex-shrink:0;
-      display:flex;align-items:center;justify-content:center;font-weight:800;
-    }
-    .brand h1{font-size:18px;margin:0;letter-spacing:0.2px;color: #fff}
-    .brand p{margin:0;font-size:12px;color:rgba(255,255,255,0.78)}
-
-    /* Hero */
-    .hero{
-      display:grid;
-      grid-template-columns: 1fr 420px;
-      gap:28px;
-      align-items:center;
-      margin-bottom:32px;
-    }
-    .hero-left{
-      padding:26px;
-      background: linear-gradient(180deg, rgba(255,255,255,0.04), rgba(255,255,255,0.02));
-      border-radius:18px;
-      backdrop-filter: blur(8px);
-      -webkit-backdrop-filter: blur(8px);
-      border: 1px solid rgba(255,255,255,0.06);
-      box-shadow: var(--card-shadow);
-    }
-    .hero-left h2{
-      font-size:34px;margin:0 0 12px;color:#fff;line-height:1.02;
-    }
-    .hero-left p{color: rgba(255,255,255,0.85);margin:0 0 18px;font-size:15px}
-    .cta-row{display:flex;gap:12px;flex-wrap:wrap}
-    .btn-primary{
-      background: linear-gradient(90deg,var(--accent-a),var(--accent-b));
-      color:#041124;border:none;padding:12px 18px;border-radius:12px;font-weight:700;
-      box-shadow: 0 8px 30px rgba(123,97,255,0.18);text-decoration:none;
-      display:inline-flex;align-items:center;gap:10px;
-    }
-    .btn-ghost{
-      background: transparent;border:1px solid rgba(255,255,255,0.12);
-      color:rgba(255,255,255,0.92);padding:10px 16px;border-radius:12px;font-weight:600;text-decoration:none;
-    }
-    .hero-right{
-      display:flex;flex-direction:column;gap:12px;
-      align-items:stretch;
-    }
-
-    /* Tools grid (glass cards) */
-    .tools{
-      display:grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px,1fr));
-      gap:20px;
-    }
-    .card{
-      background: linear-gradient(180deg, rgba(255,255,255,0.06), rgba(255,255,255,0.03));
-      border-radius: var(--radius);
-      padding:18px;
-      border: 1px solid rgba(255,255,255,0.06);
-      backdrop-filter: blur(10px);
-      -webkit-backdrop-filter: blur(10px);
-      box-shadow: 0 10px 30px rgba(2,6,23,0.55);
-      transition: transform .22s ease, box-shadow .22s ease;
-      min-height:140px; display:flex;flex-direction:column;justify-content:space-between;
-    }
-    .card:hover{ transform: translateY(-8px); box-shadow: 0 18px 40px rgba(2,6,23,0.6); }
-    .card h3{margin:0 0 8px;font-size:18px;color:#fff}
-    .card p{margin:0 0 14px;color:rgba(255,255,255,0.85);font-size:13px}
-    .card .tools-foot{display:flex;align-items:center;justify-content:space-between;gap:8px}
-    .small-tag{font-size:12px;padding:6px 10px;border-radius:10px;background:rgba(255,255,255,0.04);color:rgba(255,255,255,0.85);}
-
-    /* Footer */
-    footer.site-foot{margin-top:36px;padding:18px;border-radius:12px;background:transparent;color:rgba(255,255,255,0.8);text-align:center;font-size:13px}
-
-    /* Decorative blobs (absolute) */
-    .blob{
-      position:fixed;pointer-events:none;z-index:0;filter: blur(60px);opacity:0.55;
-    }
-    .blob.a{right:-120px;top:-60px;width:420px;height:420px;background:linear-gradient(135deg,var(--accent-a),var(--accent-b));transform:rotate(10deg);}
-    .blob.b{left:-120px;bottom:-120px;width:380px;height:380px;background:linear-gradient(135deg, rgba(45,212,191,0.9), rgba(59,130,246,0.6));}
-
-    /* Responsive */
-    @media (max-width:980px){
-      .hero{grid-template-columns:1fr; padding-bottom:8px}
-      .hero-right{order:2}
-    }
-    @media (max-width:520px){
-      .hero-left h2{font-size:28px}
-    }
-  </style>
+  <link rel="stylesheet" href="assets/styles.css">
 </head>
+
 <body>
-  <!-- decorative blobs -->
-  <div class="blob a" aria-hidden="true"></div>
-  <div class="blob b" aria-hidden="true"></div>
+  <header class="header">
+    <div class="hero">
+      <h1>HappyEdit</h1>
+      <p class="tagline">Fast. Free. Private. Browser-based PDF tools.</p>
+      <p class="subtag">No uploads. All processing happens locally in your browser.</p>
+    </div>
+  </header>
 
-  <div class="wrap" style="position:relative;z-index:10;">
-    <header class="site-head" role="banner">
-      <a class="brand" href="/" aria-label="HappyEdit home">
-        <span class="logo-dot" aria-hidden="true">H</span>
-        <div>
-          <h1>HappyEdit</h1>
-          <p>Private browser-side PDF tools</p>
-        </div>
+  <main class="container">
+    <section class="tools-grid">
+
+      <a class="tool-card" href="edit/index.html">
+        <h2>Edit PDF</h2>
+        <p>Edit your PDF directly in the browser.</p>
       </a>
-      <nav aria-label="Main navigation">
-        <a class="btn-ghost" href="https://github.com/kilikilogo/happyedit" target="_blank" rel="noopener">Source</a>
-      </nav>
-    </header>
 
-    <main>
-      <section class="hero">
-        <div class="hero-left" role="region" aria-labelledby="hero-title">
-          <h2 id="hero-title">Fast • Private • In-browser PDF tools</h2>
-          <p>Edit, split, remove pages, insert pages, and unlock PDFs — all processed locally in your browser. No upload, no server costs.</p>
+      <a class="tool-card" href="split/index.html">
+        <h2>Split PDF</h2>
+        <p>Split pages from your PDF instantly.</p>
+      </a>
 
-          <div class="cta-row" style="margin-top:16px;">
-            <a class="btn-primary" href="edit/index.html">Start Editing</a>
-            <a class="btn-ghost" href="split/index.html">Try Split</a>
-          </div>
+      <a class="tool-card" href="delete-pages/index.html">
+        <h2>Delete Pages</h2>
+        <p>Remove any unwanted pages.</p>
+      </a>
 
-          <ul style="display:flex;gap:12px;margin-top:16px;color:rgba(255,255,255,0.9);font-size:13px">
-            <li>✅ Works offline in browser</li>
-            <li>🔒 Files never leave your device</li>
-          </ul>
-        </div>
+      <a class="tool-card" href="add-pages/index.html">
+        <h2>Add Pages</h2>
+        <p>Insert new pages into your PDF.</p>
+      </a>
 
-        <aside class="hero-right" aria-hidden="true">
-          <div class="card" style="padding:16px">
-            <h3>Quick actions</h3>
-            <p class="small-tag">Pick a tool to start — no signup required</p>
-            <div style="margin-top:12px;display:flex;flex-direction:column;gap:8px">
-              <a class="btn-ghost" href="split/index.html">Split PDF</a>
-              <a class="btn-ghost" href="delete-pages/index.html">Delete Pages</a>
-              <a class="btn-ghost" href="add-pages/index.html">Add Pages</a>
-            </div>
-          </div>
-          <div style="height:12px"></div>
-          <div class="card" style="padding:14px">
-            <h3 style="margin-bottom:6px">Note on large files</h3>
-            <p style="font-size:13px;color:rgba(255,255,255,0.82);margin-bottom:6px">For best performance, keep files under ~20–30 MB. Very large PDFs may slow down on low-memory devices.</p>
-          </div>
-        </aside>
-      </section>
+      <a class="tool-card" href="decrypt/index.html">
+        <h2>Decrypt PDF</h2>
+        <p>Unlock password-protected PDF files.</p>
+      </a>
 
-      <section aria-labelledby="tools-title" style="margin-top:18px;">
-        <h2 id="tools-title" style="font-size:18px;margin-bottom:12px;color:rgba(255,255,255,0.95)">Tools</h2>
-        <div class="tools" role="list">
-          <div class="card" role="listitem" aria-label="Edit PDF">
-            <div>
-              <h3>Edit PDF</h3>
-              <p>Add watermark, rotate, and simple edits. Works in browser.</p>
-            </div>
-            <div class="tools-foot">
-              <span class="small-tag">Editor</span>
-              <a class="btn-primary" href="edit/index.html">Open</a>
-            </div>
-          </div>
+    </section>
+  </main>
 
-          <div class="card" role="listitem" aria-label="Split PDF">
-            <div>
-              <h3>Split PDF</h3>
-              <p>Choose pages or ranges and export separate PDF files.</p>
-            </div>
-            <div class="tools-foot">
-              <span class="small-tag">Splitter</span>
-              <a class="btn-primary" href="split/index.html">Open</a>
-            </div>
-          </div>
-
-          <div class="card" role="listitem" aria-label="Delete pages">
-            <div>
-              <h3>Delete Pages</h3>
-              <p>Remove unwanted pages quickly and download the cleaned file.</p>
-            </div>
-            <div class="tools-foot">
-              <span class="small-tag">Cleaner</span>
-              <a class="btn-primary" href="delete-pages/index.html">Open</a>
-            </div>
-          </div>
-
-          <div class="card" role="listitem" aria-label="Add pages">
-            <div>
-              <h3>Add Pages</h3>
-              <p>Insert pages from another PDF or append blank pages.</p>
-            </div>
-            <div class="tools-foot">
-              <span class="small-tag">Merger</span>
-              <a class="btn-primary" href="add-pages/index.html">Open</a>
-            </div>
-          </div>
-
-          <div class="card" role="listitem" aria-label="Decrypt PDF">
-            <div>
-              <h3>Decrypt PDF</h3>
-              <p>Remove password protection if you know the password (rebuilds pages as images).</p>
-            </div>
-            <div class="tools-foot">
-              <span class="small-tag">Unlock</span>
-              <a class="btn-primary" href="decrypt/index.html">Open</a>
-            </div>
-          </div>
-        </div>
-      </section>
-    </main>
-
-    <footer class="site-foot">
-      © 2025 HappyEdit — Privacy first. Files processed locally in your browser.
-    </footer>
-  </div>
+  <footer class="footer">
+    <p>© 2025 HappyEdit · All operations are processed locally in your browser.</p>
+  </footer>
 </body>
 </html>
