Refactor index.html for improved layout and content
Updated the HTML structure and content for better clarity and organization.

--- a/index.html
+++ b/index.html
@@ -1,78 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-  <title>HappyEdit – Free & Private Online PDF Tools</title>
-
-  <!-- SEO -->
-  <meta name="description" content="HappyEdit offers free, fast and privacy-friendly PDF tools including edit, split, delete, add pages and decrypt. All operations are processed directly in your browser." />
-  <meta name="keywords" content="PDF tool, edit PDF, split PDF, delete PDF pages, decrypt PDF, browser PDF editor" />
-  <meta name="robots" content="index, follow">
-
-  <!-- Google Search Console -->
-  <meta name="google-site-verification" content="YOUR_GSC_CODE_HERE">
-
-  <!-- Open Graph -->
-  <meta property="og:title" content="HappyEdit - Free Online PDF Tools">
-  <meta property="og:description" content="Free, browser-based PDF editing tools with full privacy.">
-  <meta property="og:image" content="https://happyedit.dpdns.org/assets/cover.png">
-  <meta property="og:url" content="https://happyedit.dpdns.org/">
-  <meta property="og:type" content="website">
-
-  <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="HappyEdit - Free Online PDF Tools">
-  <meta name="twitter:description" content="Free PDF tools processed directly in your browser.">
-  <meta name="twitter:image" content="https://happyedit.dpdns.org/assets/cover.png">
-
-  <link rel="icon" href="assets/favicon.png" type="image/png">
-  <link rel="stylesheet" href="assets/styles.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="HappyEdit — Simple and elegant online PDF tools" />
+    <meta name="google-site-verification" content="PASTE_YOUR_GSC_CODE_HERE" />
+    <title>HappyEdit — Simple PDF Tools</title>
+    <link rel="stylesheet" href="styles.css" />
 </head>
-
 <body>
-  <header class="header">
-    <div class="hero">
-      <h1>HappyEdit</h1>
-      <p class="tagline">Fast. Free. Private. Browser-based PDF tools.</p>
-      <p class="subtag">No uploads. All processing happens locally in your browser.</p>
-    </div>
-  </header>
+    <header class="navbar">
+        <div class="logo">HappyEdit</div>
+        <nav>
+            <a href="#features">Features</a>
+            <a href="#tools">Tools</a>
+            <a href="#about">About</a>
+        </nav>
+    </header>
 
-  <main class="container">
-    <section class="tools-grid">
-
-      <a class="tool-card" href="edit/index.html">
-        <h2>Edit PDF</h2>
-        <p>Edit your PDF directly in the browser.</p>
-      </a>
-
-      <a class="tool-card" href="split/index.html">
-        <h2>Split PDF</h2>
-        <p>Split pages from your PDF instantly.</p>
-      </a>
-
-      <a class="tool-card" href="delete-pages/index.html">
-        <h2>Delete Pages</h2>
-        <p>Remove any unwanted pages.</p>
-      </a>
-
-      <a class="tool-card" href="add-pages/index.html">
-        <h2>Add Pages</h2>
-        <p>Insert new pages into your PDF.</p>
-      </a>
-
-      <a class="tool-card" href="decrypt/index.html">
-        <h2>Decrypt PDF</h2>
-        <p>Unlock password-protected PDF files.</p>
-      </a>
-
+    <section class="hero">
+        <h1>Modern, Clean and Fast PDF Tools</h1>
+        <p>Edit, convert, compress and manage PDFs with a clean Ubuntu‑inspired design.</p>
+        <a class="cta-main" href="#tools">Explore Tools</a>
     </section>
-  </main>
 
-  <footer class="footer">
-    <p>© 2025 HappyEdit · All operations are processed locally in your browser.</p>
-  </footer>
+    <section id="features" class="features">
+        <div class="feature-card">
+            <h3>Fast</h3>
+            <p>Optimized for instant processing even on large documents.</p>
+        </div>
+        <div class="feature-card">
+            <h3>Secure</h3>
+            <p>Your files are processed with privacy in mind.</p>
+        </div>
+        <div class="feature-card">
+            <h3>Clean UI</h3>
+            <p>Ubuntu‑style: simple, elegant, readable, beautiful.</p>
+        </div>
+    </section>
+
+    <section id="tools" class="tools">
+        <h2>Popular Tools</h2>
+        <div class="tool-grid">
+            <a class="tool-card" href="edit.html">Edit PDF</a>
+            <a class="tool-card" href="compress.html">Compress PDF</a>
+            <a class="tool-card" href="convert.html">PDF Converter</a>
+            <a class="tool-card" href="merge.html">Merge PDF</a>
+        </div>
+    </section>
+
+    <footer class="footer">
+        HappyEdit © 2025 — Built with ❤️
+    </footer>
 </body>
 </html>
