Update stylesheet link to use assets directory

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="HappyEdit — Simple and elegant online PDF tools" />
     <meta name="google-site-verification" content="PASTE_YOUR_GSC_CODE_HERE" />
     <title>HappyEdit — Simple PDF Tools</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="assets/styles.css" />
 </head>
 <body>
     <header class="navbar">
