--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="HappyEdit — Simple and elegant online PDF tools" />
     <meta name="google-site-verification" content="PASTE_YOUR_GSC_CODE_HERE" />
     <title>HappyEdit — Simple PDF Tools</title>
+    <link rel="icon" href="../assets/favicon.png" type="image/png">
     <link rel="stylesheet" href="assets/styles.css" />
 </head>
 <body>
