--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
     </section>
 
     <section id="tools" class="tools">
-        <h2>Popular Tools</h2>
+        <h2>Tools</h2>
         <div class="tool-grid">
-            <a class="tool-card" href="edit.html">Edit PDF</a>
-            <a class="tool-card" href="compress.html">Compress PDF</a>
-            <a class="tool-card" href="convert.html">PDF Converter</a>
-            <a class="tool-card" href="merge.html">Merge PDF</a>
+            <a class="tool-card" href="edit/index.html">Edit PDF</a>
+            <a class="tool-card" href="delete-pages/index.html">Delete PDF pages</a>
+            <a class="tool-card" href="convert.html">PDF Converter(not)</a>
+            <a class="tool-card" href="merge.html">Merge PDF(not)</a>
         </div>
     </section>
 
