--- a/edit/index.html
+++ b/edit/index.html
@@ -3,258 +3,52 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>HappyEdit — PDF Editor</title>
-<meta name="description" content="Edit PDF online: add watermark text, rotate pages, and download. All in your browser.">
-<link rel="icon" href="../assets/favicon.png" type="image/png">
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="../assets/styles.css">
-
-<!-- pdf-lib -->
-<script src="https://cdn.jsdelivr.net/npm/pdf-lib@1.17.1/dist/pdf-lib.min.js"></script>
-<!-- pdf.js for preview -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.min.js"></script>
-
-<style>
-  body {
-    font-family: 'Inter', sans-serif;
-    background: radial-gradient(1200px 600px at 10% 10%, rgba(123,97,255,0.18), transparent 10%),
-                radial-gradient(1000px 500px at 90% 90%, rgba(45,212,191,0.12), transparent 12%),
-                linear-gradient(180deg,#0f172a,#0b3e6b);
-    color: white;
-    min-height: 100vh;
-    margin: 0;
-    padding: 32px 20px;
-  }
-
-  .wrap {
-    max-width: 1000px;
-    margin: 0 auto;
-    position: relative;
-    z-index: 10;
-  }
-
-  header{
-    display:flex;
-    justify-content:space-between;
-    align-items:center;
-    margin-bottom:32px;
-  }
-  header .logo{
-    font-size:1.8rem;
-    font-weight:700;
-    color:#fff;
-    text-decoration:none;
-  }
-  header nav a{
-    color: rgba(255,255,255,0.85);
-    text-decoration:none;
-    font-weight:600;
-  }
-  header nav a:hover{color:#7b61ff;}
-
-  h1{margin-bottom:12px;}
-  p.lead{color:rgba(255,255,255,0.85); margin-bottom:20px;}
-
-  .card {
-    background: rgba(255,255,255,0.12);
-    backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(10px);
-    border-radius:16px;
-    border:1px solid rgba(255,255,255,0.08);
-    padding:20px;
-    box-shadow:0 10px 30px rgba(2,6,23,0.55);
-    transition: transform 0.22s, box-shadow 0.22s;
-    margin-bottom:20px;
-  }
-  .card:hover {
-    transform: translateY(-6px);
-    box-shadow: 0 18px 40px rgba(2,6,23,0.6);
-  }
-
-  label.file-label{
-    display:block;
-    margin-bottom:12px;
-    font-weight:600;
-    font-size:14px;
-  }
-  input[type="file"], input[type="text"], select{
-    width:100%;
-    padding:8px 12px;
-    border-radius:10px;
-    border:none;
-    margin-top:4px;
-  }
-
-  .controls-row{
-    display:flex;
-    gap:12px;
-    flex-wrap:wrap;
-    margin:14px 0;
-  }
-  .btn, .btn-primary {
-    cursor:pointer;
-    padding:10px 16px;
-    border-radius:12px;
-    border:none;
-    font-weight:700;
-    transition: transform 0.18s;
-    text-decoration:none;
-    text-align:center;
-    display:inline-block;
-  }
-  .btn{
-    background: rgba(255,255,255,0.08);
-    color:#fff;
-  }
-  .btn:hover{transform: translateY(-2px);}
-  .btn-primary{
-    background: linear-gradient(90deg, #7b61ff, #2dd4bf);
-    color:#041124;
-  }
-
-  #preview{
-    display:flex;
-    flex-wrap:wrap;
-    gap:12px;
-    margin-top:14px;
-  }
-  #preview canvas{
-    border-radius:10px;
-    box-shadow:0 4px 20px rgba(0,0,0,0.5);
-    width:150px;
-    height:auto;
-  }
-
-  footer{
-    text-align:center;
-    color: rgba(255,255,255,0.78);
-    margin-top:40px;
-    font-size:0.9rem;
-  }
-</style>
+<title>HappyEdit - Edit PDF</title>
+<meta name="description" content="Edit your PDF online: reorder pages, add watermark, delete or insert pages directly in your browser.">
+<meta name="keywords" content="PDF editor, edit PDF online, watermark PDF, reorder PDF pages">
+<meta name="robots" content="index, follow">
+<meta name="google-site-verification" content="YOUR_GSC_CODE_HERE">
+<link rel="stylesheet" href="assets/styles.css">
+<link rel="stylesheet" href="assets/edit.css">
 </head>
 <body>
-<div class="wrap">
-  <header>
-    <a class="logo" href="../">HappyEdit</a>
-    <nav><a href="../">Home</a></nav>
-  </header>
+<header class="navbar">
+  <div class="logo">HappyEdit</div>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="#pdf-editor">Editor</a>
+  </nav>
+</header>
 
-  <main>
-    <h1>PDF Editor</h1>
-    <p class="lead">Add watermark text or rotate pages. Files are processed in your browser — no upload.</p>
+<main class="container">
+  <section id="pdf-editor">
+    <h1>Edit PDF</h1>
+    <p>Drag to reorder pages, add watermark, or delete pages easily.</p>
 
-    <div class="card">
-      <label class="file-label">
-        Upload PDF
-        <input id="fileInput" type="file" accept="application/pdf">
-      </label>
-
-      <div class="controls-row">
-        <input id="watermarkText" type="text" placeholder="Watermark text (e.g. CONFIDENTIAL)" />
-        <select id="position">
-          <option value="center">Center</option>
-          <option value="top-left">Top-left</option>
-          <option value="top-right">Top-right</option>
-          <option value="bottom-left">Bottom-left</option>
-          <option value="bottom-right">Bottom-right</option>
-        </select>
-        <button id="applyWatermark" class="btn">Add Watermark</button>
-        <button id="rotatePages" class="btn">Rotate +90°</button>
+    <div class="pdf-container">
+      <div class="pdf-page" id="page-1">
+        <span class="page-number">1</span>
+        <canvas></canvas>
       </div>
-
-      <div id="preview"></div>
-
-      <div class="actions">
-        <button id="downloadBtn" class="btn-primary" disabled>Download Edited PDF</button>
+      <div class="pdf-page" id="page-2">
+        <span class="page-number">2</span>
+        <canvas></canvas>
       </div>
+      <!-- 动态生成 PDF 页面 -->
     </div>
-  </main>
 
-  <footer>© 2025 HappyEdit — Files processed locally in your browser</footer>
-</div>
+    <div class="action-buttons">
+      <button id="add-watermark">Add Watermark</button>
+      <button id="save-pdf">Save PDF</button>
+    </div>
+  </section>
+</main>
 
-<script>
-const { PDFDocument, StandardFonts } = PDFLib;
-pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.worker.min.js';
+<footer class="footer">
+  © 2025 HappyEdit · All operations are local in your browser
+</footer>
 
-let originalArrayBuffer = null;
-const fileInput = document.getElementById('fileInput');
-const preview = document.getElementById('preview');
-const downloadBtn = document.getElementById('downloadBtn');
-const watermarkText = document.getElementById('watermarkText');
-const applyWatermarkBtn = document.getElementById('applyWatermark');
-const rotateBtn = document.getElementById('rotatePages');
-
-fileInput.addEventListener('change', async (e) => {
-  const file = e.target.files[0];
-  if(!file) return;
-  originalArrayBuffer = await file.arrayBuffer();
-  await renderPreview(originalArrayBuffer);
-  downloadBtn.disabled = false;
-});
-
-async function renderPreview(arrayBuffer){
-  preview.innerHTML = '';
-  const pdf = await pdfjsLib.getDocument({data:arrayBuffer}).promise;
-  for(let i=1;i<=pdf.numPages;i++){
-    const page = await pdf.getPage(i);
-    const viewport = page.getViewport({scale:0.6});
-    const canvas=document.createElement('canvas');
-    canvas.width=viewport.width;
-    canvas.height=viewport.height;
-    const ctx=canvas.getContext('2d');
-    await page.render({canvasContext:ctx,viewport}).promise;
-    preview.appendChild(canvas);
-  }
-}
-
-applyWatermarkBtn.addEventListener('click', async ()=>{
-  if(!originalArrayBuffer) return alert('Please upload a PDF first.');
-  const text = watermarkText.value.trim();
-  if(!text) return alert('Enter watermark text.');
-  const pdfDoc = await PDFDocument.load(originalArrayBuffer);
-  const pages = pdfDoc.getPages();
-  const helvetica = await pdfDoc.embedFont(StandardFonts.HelveticaBold);
-  pages.forEach(page=>{
-    const {width,height}=page.getSize();
-    const fontSize=Math.max(24,Math.min(72,Math.floor(Math.min(width,height)/10)));
-    page.drawText(text,{
-      x: width/2 - (helvetica.widthOfTextAtSize(text,fontSize)/2),
-      y: height/2 - fontSize/2,
-      size: fontSize,
-      font: helvetica,
-      opacity:0.15,
-      rotate:{degrees:-30}
-    });
-  });
-  originalArrayBuffer = await pdfDoc.save();
-  await renderPreview(originalArrayBuffer);
-  alert('Watermark added.');
-});
-
-rotateBtn.addEventListener('click', async ()=>{
-  if(!originalArrayBuffer) return alert('Please upload a PDF first.');
-  const pdfDoc = await PDFDocument.load(originalArrayBuffer);
-  pdfDoc.getPages().forEach(page=>{
-    const current=page.getRotation().angle||0;
-    page.setRotation((current+90)%360);
-  });
-  originalArrayBuffer = await pdfDoc.save();
-  await renderPreview(originalArrayBuffer);
-});
-
-downloadBtn.addEventListener('click', ()=>{
-  if(!originalArrayBuffer) return;
-  const blob = new Blob([originalArrayBuffer],{type:'application/pdf'});
-  const a=document.createElement('a');
-  a.href=URL.createObjectURL(blob);
-  a.download='happyedit-edited.pdf';
-  document.body.appendChild(a);
-  a.click();
-  a.remove();
-  URL.revokeObjectURL(a.href);
-});
-</script>
+<script src="assets/pdf-lib.min.js"></script>
+<script src="assets/edit.js"></script>
 </body>
 </html>
