Add logo icon to header and new icon.css stylesheet
Introduced a new icon.css file for logo styling and updated index.html to display a PNG logo icon next to the HappyEdit text in the header. This improves branding and visual alignment of the header elements.

--- a/edit/index.html
+++ b/edit/index.html
@@ -14,6 +14,8 @@
   <link rel="stylesheet" href="../assets/styles.css">
   <!-- Editor-specific styles -->
   <link rel="stylesheet" href="../assets/edit.css">
+  <!-- Editor-Icon_logo -->
+  <link rel="stylesheet" href="../assets/icon.css">
 
   <!-- Libraries (CDN) -->
   <script src="https://cdn.jsdelivr.net/npm/pdf-lib@1.17.1/dist/pdf-lib.min.js"></script>
@@ -23,10 +25,11 @@
 <body>
   <header class="navbar">
     <div class="container nav-content">
-      <div class="logo"><a href="../index.html" style="text-decoration:none;color:inherit">HappyEdit</a></div>
+      <div class="logo">
+        <img src="/assets/favicon.png" alt="Logo icon" class="logo-icon" />
+        <a href="../index.html" style="text-decoration:none;color:inherit">HappyEdit</a></div>
       <nav>
         <a href="../index.html">Home</a>
-        <a href="../index.html#tools">Tools</a>
       </nav>
     </div>
   </header>
