--- a/edit/index.html
+++ b/edit/index.html
@@ -6,7 +6,7 @@
     <title>PDF Editor — HappyEdit</title>
     <link rel="icon" href="/assets/favicon.png" type="image/png">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/assets/styles.css">
     <script src="https://unpkg.com/lucide@latest"></script>
     <!-- PDF.js library -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.4.120/pdf.min.js"></script>
