--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </div>
             
             <div class="tools-grid">
-                <a href="edit/index.html" class="tool-card">
+                <a href="/edit/index.html" class="tool-card">
                     <div class="tool-header" style="background: linear-gradient(to bottom right, #3B82F6, #2563EB);">
                         <div class="tool-icon-container">
                             <svg class="tool-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round"><path d="M12 20h9"/><path d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"/></svg>
