--- a/colortools/colortools.html
+++ b/colortools/colortools.html
@@ -5,15 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Free color identification tool - convert color codes to visual swatches or extract colors from any image with our precise eyedropper tool.">
   <meta name="keywords" content="color picker, color identifier, hex to image, rgb converter, image color extraction, design tools">
-  <meta name="author" content="Your Website Name">
+  <meta name="author" content="HappyEdit">
   <meta property="og:title" content="Color Identifier & Converter Tool">
   <meta property="og:description" content="Convert color codes to visual swatches or extract colors from images with our free online tool.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://yourwebsite.com/color-identifier">
-  <meta property="og:image" content="https://yourwebsite.com/assets/images/color-tool-preview.jpg">
+  <meta property="og:image" content="https://happyedit.dpdns.org/assets/favicon.png">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Color Identifier & Converter Tool">
   <meta name="twitter:description" content="Free online tool to convert color codes and extract colors from images.">
+  <!-- Google Search Console verification meta tag -->
+  <meta name="google-site-verification" content="REPLACE_WITH_ACTUAL_VERIFICATION_CODE" />
   
   <title>Color Identifier Tool - Convert Codes & Extract Colors from Images</title>
   
@@ -28,7 +29,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   
   <!-- Your existing CSS file -->
-  <link rel="stylesheet" href="/assets/style.css">
+  <link rel="stylesheet" href="/assets/styles.css">
   
   <!-- Structured data for Google -->
   <script type="application/ld+json">
@@ -46,7 +47,7 @@
     },
     "creator": {
       "@type": "Organization",
-      "name": "Your Website Name"
+      "name": "HappyEdit"
     }
   }
   </script>
@@ -579,8 +580,8 @@
           <div class="footer-logo-icon">
             <i class="fas fa-palette"></i>
           </div>
+          <div class="footer-logo-text">ColorTools</div>
         </div>
-        <div class="footer-logo-text">ColorTools</div>
         <p class="footer-description">Professional color identification and conversion tools for designers and developers.</p>
         
         <div class="footer-links">
@@ -598,16 +599,6 @@
       </div>
     </div>
   </footer>
-
-  <!-- Google Tag Manager for analytics and GSC verification -->
-  <script>
-    // Basic Google Tag Manager setup (replace with your actual GTM ID)
-    (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-XXXXXXX');
-  </script>
 
   <script>
     // Tool functionality JavaScript
@@ -1017,8 +1008,5 @@
       });
     });
   </script>
-  
-  <!-- Google Search Console verification meta tag -->
-  <meta name="google-site-verification" content="YOUR_GSC_VERIFICATION_CODE_HERE" />
 </body>
 </html>
