Consolidate ColorTools styles into main stylesheet
Removed colortools/colortoolsstyle.css and migrated all ColorTools-specific styles into assets/styles.css. Updated colortools.html to reference only the main stylesheet, simplifying style management and reducing duplication.

--- a/colortools/colortools.html
+++ b/colortools/colortools.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/assets/styles.css">
-  <link rel="stylesheet" href="/colortools/colortoolsstyle.css">
   
   <!--
     Google Search Console Verification - Updated with proper verification format
@@ -42,7 +41,7 @@
     Favicon and Touch Icons - For various devices and platforms
     Ensures proper icon display across different devices and contexts
   -->
-  <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">stylesheet
+  <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
   <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon.png">
   
