--- a/colortools/colortools.html
+++ b/colortools/colortools.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/assets/styles.css">
+  <link rel="stylesheet" href="/colortools/colortools.css">
   
   <!--
     Google Search Console Verification - Updated with proper verification format
